--- a/gmao/static/gmao/css/main.css
+++ b/gmao/static/gmao/css/main.css
@@ -196,3 +196,37 @@ table.dataTable tbody tr.status-ATD {
         width: 100px;
     }
 }
+
+/*PortFolio*/
+#portfolioTable {
+    width: 100% !important;
+}
+
+#portfolioTable td.panne-cell {
+    max-width: 200px;
+    white-space: normal;
+    word-wrap: break-word;
+}
+
+#portfolioTable td.action-cell {
+    white-space: nowrap;
+}
+
+.table-responsive {
+    border: none;
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+    #portfolioTable td, #portfolioTable th {
+        white-space: normal;
+    }
+}
+
+.card-body {
+    padding: 0.5rem;
+}
+
+.dataTables_wrapper .row {
+    margin: 0;
+}
