--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -92,7 +92,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
-    <style>
+    {% comment %}    <style>
         body {
             padding-top: 60px; /* Ajustez cette valeur en fonction de la hauteur de votre barre de navigation */
         }
@@ -139,7 +139,7 @@
         .badge {
             font-size: 0.8rem;
         }
-    </style>
+    </style>{% endcomment %}
 {% endblock extra_css %}
 
 {% block extra_js %}
