--- a/gmao/templates/gmao/home__.html
+++ b/gmao/templates/gmao/home__.html
@@ -49,19 +49,6 @@
 {% endblock navbar-content %}
 
 {% block extra_css %}
-    <!-- ... autres styles ... -->
-    <style>
-        .intervention-form {
-            transform: rotate(90deg);
-            transform-origin: left top;
-            width: 150vh;
-            height: 100vw;
-            overflow-x: hidden;
-            position: absolute;
-            top: 100px;
-            left: 100px;
-        }
-    </style>
 {% endblock extra_css %}
 
 {% block content %}
@@ -190,6 +177,7 @@
             </section>
         </div>
 
+
     {% else %}
         <div class="row mb-4">
             <div class="col-12">
@@ -197,14 +185,15 @@
                     <div class="card-header bg-info text-white">
                         <h5 class="mb-0">Mon portefeuille de doléances</h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body p-0"> <!-- Supprimez le padding ici -->
                         <div id="portfolioContainer">
+                            <!-- Le tableau sera inséré ici par JavaScript -->
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
+
     {% endif %}
 
 
