--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -142,18 +142,20 @@
                         <h5 class="mb-0">Mon portefeuille de doléances</h5>
                     </div>
                     <div class="card-body" style="overflow-x: auto;">
-                        <table class="table table-bordered" id="portfolioTable" style="width:100%">
-                            <thead class="fw-bold text-center bg-info text-light text-uppercase">
-                            <tr>
-                                <th>NDI</th>
-                                <th>Station</th>
-                                <th>Élément</th>
-                                <th>Panne</th>
-                                <th>Statut</th>
-                                <th>Actions</th>
-                            </tr>
-                            </thead>
-                        </table>
+                        <div class="table-responsive">
+                            <table id="portfolioTable" class="table table-bordered" style="width:100%">
+                                <thead>
+                                <tr>
+                                    <th>NDI</th>
+                                    <th>Station</th>
+                                    <th>Élément</th>
+                                    <th>Panne</th>
+                                    <th>Statut</th>
+                                    <th>Actions</th>
+                                </tr>
+                                </thead>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
